# ChangeLog for app-misc/dpaster
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*dpaster-20130802 (02 Aug 2013)

  02 Aug 2013;  <johann@gentoo.org> +dpaster-20130802.ebuild, +metadata.xml:
  (Re-?)added ebuild for dpaster