@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>jlec@j-schmitz.net</email>
-		<name>Justin Lecher (jlec)</name>
-	</maintainer>
-	<maintainer>
-		<email>johann@j-schmitz.net</email>
-		<name>Johann Schmitz</name>
-	</maintainer>
-	<upstream>
-		<remote-id type="github">zodman/dpaster</remote-id>
-	</upstream>
+  <maintainer>
+    <email>jlec@j-schmitz.net</email>
+    <name>Justin Lecher (jlec)</name>
+  </maintainer>
+  <maintainer>
+    <email>johann@j-schmitz.net</email>
+    <name>Johann Schmitz</name>
+  </maintainer>
+  <upstream>
+    <remote-id type="github">zodman/dpaster</remote-id>
+  </upstream>
 </pkgmetadata>
-
