@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/dpaster
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  10 Nov 2014; Justin Lecher <jlec@gentoo.org> dpaster-20130802.ebuild,
+  metadata.xml:
+  Fix broken deps
 
 *dpaster-20130802 (02 Aug 2013)
 
